# FPS

./: .gitignore  LICENSE  MANIFEST.in  README.md  advanced.html  feature-banks.html  index.html  pyproject.toml  quickstart.html  reference.html  story.html  todo.md  training.html
configs/: example_fps.yaml
configs/datasets/: office31_resnet.yaml  office31_siglip2.yaml  office31_vit.yaml  office_home_resnet.yaml  office_home_siglip2.yaml  office_home_vit.yaml  visda17_resnet.yaml  visda17_siglip2.yaml  visda17_vit.yaml
configs/examples/: office31_amazon_to_webcam_vit_packaged_h5.yaml
configs/search/: default_search_space.yaml
docs/: advanced.html  feature-banks.html  index.html  quickstart.html  reference.html  story.html  training.html
docs/assets/: site.css
examples/: advanced_custom_backbone_feature_bank.py  basic_train.py  custom_loss_training.py
examples/origin_story/: README.md  test2.ipynb  test2_variant.ipynb
scripts/: download_datasets.py  download_feature_banks.py  extract_benchmark_feature_banks.sh  make_smoke_feature_bank.py  run_benchmarks.py  run_benchmarks.sh  search_fps_hyperparams.py  search_training_configs.sh
src/fps_uda/: __init__.py  __main__.py  cli.py  losses.py  metrics.py
src/fps_uda/adapters/: __init__.py  datasets.py  feature_extraction.py
src/fps_uda/analysis/: __init__.py  feature_bank.py
src/fps_uda/data/: __init__.py  features.py
src/fps_uda/io/: __init__.py  config.py  h5.py
src/fps_uda/models/: __init__.py  backbones.py  dy.py
src/fps_uda/training/: __init__.py  config.py  evaluation.py  (+6 more)
tests/: test_backbones.py  test_cli.py  test_datasets.py  test_download_datasets.py  test_download_feature_banks.py  test_feature_bank_analysis.py  test_features.py  test_h5.py  test_models.py  test_real_bank_smoke.py  test_search_hyperparams.py  test_train_smoke.py  test_training_config.py
tests/fixtures/: README.md
(+36 files in other folders)
